solved subarray sum equals k